# atm-map

./: .prettierignore  package.json  pnpm-lock.yaml  tailwind.config.ts
script/: README.md  generate.sh  pyproject.toml
script/src/atmjsongen/: __init__.py  main.py
src/: app.html
src/lib/: DarkmodeControl.svelte  store.ts
src/routes/: +layout.svelte  +page.svelte  style.ts
src/routes/about/: +page.svelte
src/routes/contribute/: +page.svelte
static/: atm.json  site.webmanifest
