[project]
name = "atmgeojsongen"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nakaya" }
]
dependencies = [
    "geopandas>=1.0.1",
    "quackosm[cli]>=0.12.1",
    "classopt>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atmjsongen"]
